--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,6 @@ spring.application.name=rentalreservationservices
 spring.datasource.url = jdbc:mysql://localhost:3306/rentalservices
 spring.datasource.username = springstudent
 spring.datasource.password = springstudent
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 logging.level.org.springframework.security=DEBUG
