--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,8 @@
 spring.application.name=rentalreservationservices
 
-
 spring.datasource.url = jdbc:mysql://localhost:3306/rentalservices
 spring.datasource.username = springstudent
 spring.datasource.password = springstudent
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 logging.level.org.springframework.security=DEBUG
