frontend changes and code for cancelling reservation

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,8 +8,13 @@ spring:
   application:
     name: rentalreservationservices
 
+#  datasource:
+#    url: jdbc:mysql://localhost:3306/rentalservices
+#    username: springstudent
+#    password: springstudent
+
   datasource:
-    url: jdbc:mysql://localhost:3306/rentalservices
+    url: jdbc:mysql://localhost:3307/rentalservices
     username: springstudent
     password: springstudent
 
@@ -18,17 +23,19 @@ spring:
       ddl-auto: update
 
   kafka:
-    bootstrap-servers: "10.40.94.194:9092"
+    bootstrap-servers: "192.168.1.4:9092"
     producer:
       keySerializer: "org.apache.kafka.common.serialization.StringSerializer"
       valueSerializer: "io.confluent.kafka.serializers.KafkaAvroSerializer"
       properties:
         schema:
           registry:
-            url: "http://10.40.94.194:8081"
+            url: "http://192.168.1.4:8081"
 
 logging:
   level:
     org:
       springframework:
         security: DEBUG
+
+
