--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -73,3 +73,20 @@ services:
       CONTROL_CENTER_MONITORING_INTERCEPTOR_TOPIC_PARTITIONS: 1
       CONFLUENT_METRICS_TOPIC_REPLICATION: 1
       PORT: 9021
+
+  mysql:
+    image: mysql:8.0
+    container_name: mysql
+    ports:
+      - "3307:3306"
+    environment:
+      MYSQL_ROOT_PASSWORD: password
+      MYSQL_DATABASE: rentalservices
+      MYSQL_USER: springstudent
+      MYSQL_PASSWORD: springstudent
+      volumes:
+        mysql-data:/var/lib/mysql
+
+volumes:
+  mysql-data:
+
