commented out reservation cancellation

--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,11 @@
 			<version>7.0.1</version>
 		</dependency>
 		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk-s3</artifactId>
+			<version>1.12.118</version>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.avro</groupId>
 			<artifactId>avro</artifactId>
 			<version>1.10.2</version>
