--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,7 @@
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+aws.access.key=${AWS_ACCESS_KEY:AKIAVRUVRSIH3LPCZLCQ}
+aws.secret.key=${AWS_SECRET_KEY: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}
+aws.s3.bucket=${AWS_S3_BUCKET:getting-started-s3-bucket-sohel}
